fix an issue on small screen size, toolheader will always showup (#3691)

--- a/src/components/Header/Header.scss
+++ b/src/components/Header/Header.scss
@@ -15,6 +15,9 @@
   height: 40px;
   @include tablet-and-mobile {
     height: 52px;
+    &.closed {
+      height: 0px;
+    }
   }
 
   &.closed {
